# stadia-dongle-esp

./: CMakeLists.txt  README.md  create_merged_fw.cmd  log  partitions.csv  partitions_debug.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.4mb  sdkconfig.old
.github/workflows/: release.yml
docs/: index.html  manifest.json
main/: CMakeLists.txt  Kconfig.projbuild  ble_central.c  ble_central.h  bridge.c  bridge.h  button_actions.c  button_actions.h  captive_portal.c  captive_portal.h  config_store.c  config_store.h  controller_manager.c  controller_manager.h  dongle_config.h  dongle_state.c  dongle_state.h  hid_extra.c  hid_extra.h  hid_mouse.c  hid_mouse.h  index.html  index_html.h  main.c  mouse_mode.c  mouse_mode.h  status_led.c  status_led.h  usb_xbox.c  usb_xbox.h  web_server.c  web_server.h  xbox_dev.c  xbox_dev.h
